Updated CSS for cta-brackets

--- a/html/pandora-homepage.html
+++ b/html/pandora-homepage.html
@@ -5,9 +5,11 @@
             <img class="pandora-tablet-down" src="features/pandora/small-texture-03.jpg?$staticLink$">
         </div>
         <div class="pandora-info">
-            <a class="pandora-achor-overlay" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit"></a>
+            <a class="pandora-achor-overlay pandora-desktop" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit"></a>
+            <a class="pandora-achor-overlay pandora-tablet-down" href="$url('Page-Show','cid','ware-pandora')$?cm_re=Home-_-pandora-feature"></a>
             <p class="feature-info">Shop the mood of AW17 with renowned Fashion Writer Pandora Sykes.</p>
-            <a class="brackets-cta" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit">Shop the edit</a>
+            <a class="brackets-cta pandora-desktop" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit">Shop the edit</a>
+            <a class="brackets-cta pandora-tablet-down" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit">Shop the edit</a>
         </div>
         <div class="pandora-hero-image pandora-tablet-down">
             <video>
@@ -28,7 +30,8 @@
             <h3 class="pandora-tablet-up"><span>P</span><span>a</span><span>n</span><span>d</span><span>o</span><span>r</span><span>a</span><span>&nbsp;</span><span>C</span><span>u</span><span>r</span><span>a</span><span>t</span><span>e</span><span>s</span></h3>
             <h4 class="brackets-cta">The new Season</h4>
             <div class="pandora-body-text-container">
-                <a class="brackets-cta" href="">Discover the style guide</a>
+                <a class="brackets-cta pandora-desktop" href="$url('Page-Show','cid','ware-pandora')$?cm_re=Home-_-pandora-feature">Discover the feature</a>
+                <a class="brackets-cta pandora-tablet-down" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit">Shop the edit</a>                
             </div>
         </div>
     </section>
@@ -43,8 +46,10 @@
             <h3 class="pandora-tablet-up">Red is the colour</h3>
             <div class="pandora-body-text-container">
                 <a class="brackets-cta pandora-tablet-down" href="$url('Search-Show','cgid','collection-edit')$?cm_re=Edit-_-pandora-collection-edit">Discover the trend</a>
+                <a class="brackets-cta pandora-desktop" href="/clothing/collection-edit/?cm_re=Edit-_-pandora-collection-edit">Discover the trend</a>         
             </div>
         </div>
+
         <div class="pandora-quote">
             <p><span class="quote-start"></span>I love the muted richness of burgundy with the tomato red on the Breton knit; the perfect introduction to the new colour of the season.<span class="quote-end"></span></p>
         </div>
@@ -55,7 +60,7 @@
         <div class="pandora-parallax pandora-parallax-1">
             <img class="pandora-tablet-down" src="features/pandora/pandora_dress.png?$staticLink$">
             <img class="pandora-desktop" src="features/pandora/pandora_dress_left-dt.png?$staticLink$">
-            <h4>Ready-<br>To-Go<br>Dress.</h4>
+            <h4>Ready-<br>To-Go<br>Dresses.</h4>
             <a class="brackets-cta" href="$url('Search-Show','cgid','dress-edit')$?cm_re=Home-_-pandora-dress-edit">Shop the look</a>
         </div>
         <div class="pandora-parallax pandora-parallax-2 pandora-tablet-down">
@@ -88,15 +93,15 @@
                         </span>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="$url('Product-Show','pid','029706')$?dwvar_029706_color=77&cm_re=Home-_-pandora-edit-_-029706">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_02970677_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE MODERN" title="THE MODERN">
+                        <img src="/features/pandora/warehouse_02970677_1.jpg?$staticlink$" alt="THE MODERN" title="THE MODERN">
                         <span class="pandora-text">
                             <p class="name">The Modern</p>
                             <p class="brackets-cta">LBD</p>
                         </span>
                     </a>
-                </li>
+                </li> -->
                 <li>
                     <a href="$url('Product-Show','pid','029969')$?dwvar_029969_color=86&cm_re=Home-_-pandora-edit-_-029969">
                         <img src="/features/pandora/warehouse_02996986_1.jpg?$staticlink$" alt="THE IT'S VINTAGE" title="THE IT'S VINTAGE">
@@ -115,15 +120,15 @@
                         </span>
                     </a>
                 </li>
-                <li>
-                    <a href="$url('Product-Show','pid','030242')$?dwvar_030242_color=99&cm_re=Home-_-pandora-edit-_-030242">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_03024299_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE WORK TO WEEKEND" title="THE WORK TO WEEKEND">
-                        <span class="pandora-text">
-                            <p class="name">The Work To Weekend</p>
-                            <p class="brackets-cta">Blazer</p>
-                        </span>
-                    </a>
-                </li>
+                <!--                 <li>
+                                    <a href="$url('Product-Show','pid','030242')$?dwvar_030242_color=99&cm_re=Home-_-pandora-edit-_-030242">
+                                        <img src="/features/pandora/warehouse_03024299_1.jpg?$staticlink$" alt="THE WORK TO WEEKEND" title="THE WORK TO WEEKEND">
+                                        <span class="pandora-text">
+                                            <p class="name">The Work To Weekend</p>
+                                            <p class="brackets-cta">Blazer</p>
+                                        </span>
+                                    </a>
+                                </li> -->
                 <li>
                     <a href="$url('Product-Show','pid','028902')$?dwvar_028902_color=47&cm_re=Home-_-pandora-edit-_-028902">
                         <img src="/features/pandora/warehouse_02890247_1.jpg?$staticlink$" alt="THE EVERYDAY HERO" title="THE EVERYDAY HERO">
@@ -144,9 +149,9 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','030257')$?dwvar_030257_color=64&cm_re=Home-_-pandora-edit-_-030257">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_03025764_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE JUST ADD BOOTS" title="THE JUST ADD BOOTS">
+                        <img src="/features/pandora/warehouse_03025764_1.jpg?$staticlink$" alt="READY-TO-GO DRESS" title="READY-TO-GO DRESS">
                         <span class="pandora-text">
-                            <p class="name">The Just Add Boots</p>
+                            <p class="name">Ready-To-Go</p>
                             <p class="brackets-cta">Dress</p>
                         </span>
                     </a>
@@ -189,7 +194,7 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','029555')$?dwvar_029555_color=62&cm_re=Home-_-pandora-edit-_-029555">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_02955562_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE AUTUMN" title="THE AUTUMN">
+                        <img src="/features/pandora/warehouse_02955562_1.jpg?$staticlink$" alt="THE AUTUMN" title="THE AUTUMN">
                         <span class="pandora-text">
                             <p class="name">The Autumn</p>
                             <p class="brackets-cta">Breton</p>
@@ -225,7 +230,7 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','029952')$?dwvar_029952_color=72&cm_re=Home-_-pandora-edit-_-029952">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_02995272_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE QUICK CHIC" title="THE QUICK CHIC">
+                        <img src="/features/pandora/warehouse_02995272_1.jpg?$staticlink$" alt="THE QUICK CHIC" title="THE QUICK CHIC">
                         <span class="pandora-text">
                             <p class="name">The Quick Chic</p>
                             <p class="brackets-cta">Trouser</p>
@@ -233,8 +238,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="$url('Product-Show','pid','029978')$?dwvar_029978_color=64&cm_re=Home-_-pandora-edit-_-029978">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_03025764_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE AGELESS TARTAN" title="THE AGELESS TARTAN">
+                    <a href="$url('Product-Show','pid','030083')$?dwvar_030083_color=99&cm_re=Home-_-pandora-edit-_-030083">
+                        <img src="/features/pandora/warehouse_02997864_1.jpg?$staticlink$" alt="THE AGELESS TARTAN" title="THE AGELESS TARTAN">
                         <span class="pandora-text">
                             <p class="name">The Ageless Tartan</p>
                             <p class="brackets-cta">Mini</p>
@@ -261,7 +266,7 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','029768')$?dwvar_029768_color=61&cm_re=Home-_-pandora-edit-_-029768">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_02976861_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE NOT QUITE BASIC" title="THE NOT QUITE BASIC">
+                        <img src="/features/pandora/warehouse_02976861_1.jpg?$staticlink$" alt="THE NOT QUITE BASIC" title="THE NOT QUITE BASIC">
                         <span class="pandora-text">
                             <p class="name">The Not Quite Basic</p>
                             <p class="brackets-cta">Knit</p>
@@ -270,7 +275,7 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','029637')$?dwvar_029637_color=72&cm_re=Home-_-pandora-edit-_-029637">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_02963772_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE SKINNY" title="THE SKINNY">
+                        <img src="/features/pandora/warehouse_02963772_1.jpg?$staticlink$" alt="THE SKINNY" title="THE SKINNY">
                         <span class="pandora-text">
                             <p class="name">The Skinny</p>
                             <p class="brackets-cta">Knit</p>
@@ -279,7 +284,7 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','030184')$?dwvar_030184_color=99&cm_re=Home-_-pandora-edit-_-030184">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_03018499_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE COOL BRITANNIA" title="THE COOL BRITANNIA">
+                        <img src="/features/pandora/warehouse_03018499_1.jpg?$staticlink$" alt="THE COOL BRITANNIA" title="THE COOL BRITANNIA">
                         <span class="pandora-text">
                             <p class="name">The Cool Britannia</p>
                             <p class="brackets-cta">Trouser</p>
@@ -297,7 +302,7 @@
                 </li>
                 <li>
                     <a href="$url('Product-Show','pid','029987')$?dwvar_029987_color=36&cm_re=Home-_-pandora-edit-_-029987">
-                        <img src="http://demandware.edgesuite.net/sits_pod30/dw/image/v2/AAXE_PRD/on/demandware.static/-/Sites-WAREHOUSE/default/images/hi-res/warehouse_02998736_1.jpg?sw=343&amp;sh=514&amp;sm=cut" alt="THE ESSENTIAL FLORAL" title="THE ESSENTIAL FLORAL">
+                        <img src="/features/pandora/warehouse_02998736_1.jpg?$staticlink$" alt="THE ESSENTIAL FLORAL" title="THE ESSENTIAL FLORAL">
                         <span class="pandora-text">
                             <p class="name">The Essential Floral</p>
                             <p class="brackets-cta">Dress</p>
@@ -306,7 +311,8 @@
                 </li>
             </ul>
         </div>
-        <a class="brackets-cta" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit">Shop Now</a>
+        <a class="brackets-cta pandora-desktop" href="$url('Search-Show','cgid','autumn-winter-edit')$?cm_re=Home-_-pandora-edit">Shop Now</a>
+        <a class="brackets-cta pandora-tablet-down" href="$url('Page-Show','cid','ware-pandora')$?cm_re=Home-_-pandora-feature">Discover the feature</a>        
     </section>
 </div>
 <script type="application/javascript" src="../js/pandora-homepage.min.js?$staticLink$"></script>
